--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #344B61;
 }
 .App {
   display: flex;
@@ -14,7 +13,9 @@ body {
   flex-direction: column;
   flex: 1;
   justify-content: center;
-  height: 80vh;
+  height: 100vh;
+  background-size: contain;
+  background-image: url('./assets/sahara.png');
 }
 
 .Wrapper {
